policies/kyverno/02-require-standard-labels.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: require-standard-labels
  annotations:
    policies.kyverno.io/title: Require Standard Kubernetes Labels
    policies.kyverno.io/category: Best Practices
    policies.kyverno.io/severity: medium
spec:
  validationFailureAction: Enforce
  background: true
  rules:
    - name: require-app-labels-on-deployments
      match:
        any:
          - resources:
              kinds:
                - Deployment
              namespaces:
                - reliability-lab
      validate:
        message: "Deployments must include app.kubernetes.io/name and app.kubernetes.io/part-of labels."
        pattern:
          metadata:
            labels:
              app.kubernetes.io/name: "?*"
              app.kubernetes.io/part-of: "?*"
